sample/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Description: >
  ECS Fargate

Mappings:
  SubnetConfig:
    VPC:
      CIDR: '10.0.0.0/16'
    Private1:
      CIDR: '10.0.1.0/24'
    Private2:
      CIDR: '10.0.2.0/24'
    Public1:
      CIDR: '10.0.3.0/24'
    Public2:
      CIDR: '10.0.4.0/24'
Resources:
##############################################
################## S3 Bucket #################
##############################################
  S3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub ${AWS::StackName}-s3bucket
      AccessControl: Private
############################################################################################
################################### VPC Config Start #######################################

##############################################
###################### VPC ###################
##############################################
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: !FindInMap [ 'SubnetConfig', 'VPC', 'CIDR' ]
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-vpc
##############################################
############ Public Subnets #################
##############################################
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: !FindInMap [ 'SubnetConfig', 'Public1', 'CIDR' ]
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-public-subnet-1
      AvailabilityZone: !Select [ 0, !GetAZs '' ]

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      VpcId: !Ref MyVPC
      CidrBlock: !FindInMap [ 'SubnetConfig', 'Public2', 'CIDR' ]
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-public-subnet-2
##############################################
############ Private Subnets #################
##############################################
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      VpcId: !Ref MyVPC
      CidrBlock: !FindInMap [ 'SubnetConfig', 'Private1', 'CIDR' ]
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-private-subnet-1

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      VpcId: !Ref MyVPC
      CidrBlock: !FindInMap [ 'SubnetConfig', 'Private2', 'CIDR' ]
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-private-subnet-2
##############################################
############### ECR Repository ###############
##############################################
  ECRRepository:
    Type: AWS::ECR::Repository
    Properties:
      RepositoryName: !Sub ${AWS::StackName}-ecrrepository
############################################################################################
################################### ALB Config Start #######################################

##############################################
########## Application Load Balancer #########
##############################################
  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub ${AWS::StackName}-alb
      Scheme: internet-facing
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      Type: application
##############################################
################ Alb Listener ################
##############################################
  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - TargetGroupArn: !Ref ALBTargetGroup
          Type: forward
#          ForwardConfig:
#            TargetGroups:
#              - TargetGroupArn: !Ref TargetGroup1
#                Weight: 1
#              - TargetGroupArn: !Ref TargetGroup2
#                Weight: 1
#        Conditions:
#          - Field: path-pattern
#            Values:
#              - foo
#        ListenerArn: !Ref Listener
#        Priority: 1
# Information for creating an action that distributes requests among one or more target groups.
# Listens to incomming requests from the load balancer
##############################################
############## ALB Target Group ##############
##############################################
  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: !Ref MyVPC
      Name: !Sub ${AWS::StackName}-targetGroup
      Protocol: HTTP
      Port: 80
      HealthCheckProtocol: HTTP
      HealthCheckPath: /
      HealthCheckPort: traffic-port
      HealthyThresholdCount: 5
      UnhealthyThresholdCount: 2
      HealthCheckTimeoutSeconds: 5
      HealthCheckIntervalSeconds: 30
      Matcher:
        HttpCode: '200'
      TargetType: ip
##############################################
############# AlB Security Group #############
##############################################
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${AWS::StackName}-alb-security-group
      GroupDescription: Allow HTTP Only.
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
##############################################
########## CloudWatchLogs Endpoint ###########
##############################################
  CloudWatchLogsEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref EndpointSecurityGroup
      ServiceName: !Sub com.amazonaws.${AWS::Region}.logs
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      VpcEndpointType: Interface
      VpcId: !Ref MyVPC
############################################################################################
############################## VPC Endpoint Config Start ###################################
# In order for Fargate on a private subnet to access the ECR, three different VPC endpoints must be created.
# Two endpoints related to the ECR and one endpoint related to S3.
##############################################
############## ECR DKR Endpoint ##############
##############################################
  ECRDkrEndpoint:
    Type: AWS::EC2::VPCEndpoint
    DependsOn: MyVPC
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref EndpointSecurityGroup
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ecr.dkr
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      VpcEndpointType: Interface
      VpcId: !Ref MyVPC
##############################################
############## ECR API Endpoint ##############
##############################################
  ECRApiEndpoint:
    Type: AWS::EC2::VPCEndpoint
    DependsOn: MyVPC
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref EndpointSecurityGroup
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ecr.api
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      VpcEndpointType: Interface
      VpcId: !Ref MyVPC
##############################################
################ S3 Endpoint #################
##############################################
  S3Endpoint:
    Type: AWS::EC2::VPCEndpoint
    DependsOn: MyVPC
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: "*"
            Action:
              - s3:*
            Resource:
              - !GetAtt S3Bucket.Arn
              - !Sub "${S3Bucket.Arn}/*"
      RouteTableIds:
        - !Ref PrivateRouteTable
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      VpcId: !Ref MyVPC
##############################################
################ Route Tables ################
##############################################
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
##############################################
################ Internet Route ##############
##############################################
  RouteToInternet:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
##############################################
################ Nate Gateway ################
##############################################
  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayAttachment.AllocationId
      SubnetId: !Ref PublicSubnet1
##############################################
########### Nate Gateway Attachment ##########
##############################################
  NatGatewayAttachment:
    Type: AWS::EC2::EIP
    DependsOn: GatewayAttachement
    Properties:
      Domain: vpc
##############################################
############# Gateway Attachment #############
##############################################
  GatewayAttachement:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway
##############################################
############## Internet Gateway ##############
##############################################
  InternetGateway:
    Type: AWS::EC2::InternetGateway
##############################################
######### Subnet Association #########
##############################################
  PrivateSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable
  PublicSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable
##############################################
########### Endpoint Security Group ##########
##############################################
  EndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Allow HTTPS traffic from the VPC'
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !Ref ContainerSecurityGroup
############################################################################################
################################# Fargate Config Start #####################################

##############################################
################### Cluster ##################
##############################################
  Cluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Sub ${AWS::StackName}-cluster
# An Amazon ECS cluster is a logical grouping of tasks or services. If you are running tasks or services that use the EC2
# launch type, a cluster is also a grouping of container instances. If you are using capacity providers, a cluster is
# also a logical grouping of capacity providers. A Cluster can be a combination of Fargate and EC2 launch types.
# When you first use Amazon ECS, a default cluster is created for you, but you can create multiple clusters in an account
# to keep your resources separate.
##############################################
############## Task Definition ###############
##############################################
  TaskDefinition1:
    Type: AWS::ECS::TaskDefinition
    DependsOn: LogGroup
    Properties:
      Cpu: '512'
      Memory: 2GB
      ExecutionRoleArn: !Ref FargateTaskExecutionRole
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn: !Ref TaskRole
      ContainerDefinitions:
        - Name: !Sub ${AWS::StackName}-nginxcontainer
          Image: nginx:latest

  TaskDefinition2:
    Type: AWS::ECS::TaskDefinition
    DependsOn: LogGroup
    Properties:
      Cpu: '512'
      Memory: 2GB
      # "The ARN of the task execution role that containers in this task can assume. All containers in this task are
      # granted the permissions that are specified in this role."
      ExecutionRoleArn: !Ref FargateTaskExecutionRole
      # awsvpc is required for Fargate
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      # "The Amazon Resource Name (ARN) of an AWS Identity and Access Management (IAM) role that grants containers in
      # the task permission to call AWS APIs on your behalf."
      TaskRoleArn: !Ref TaskRole
      ContainerDefinitions:
        - Name: !Sub ${AWS::StackName}-flaskcontainer
          Image: !Sub ${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${ECRRepository}:latest
          PortMappings:
            - ContainerPort: 80
              HostPort: 80
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref LogGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: !Sub ${AWS::StackName}-log-stream
# To prepare your application to run on Amazon ECS, you create a task definition. The task definition is a text file, in
# JSON format, that describes one or more containers, up to a maximum of ten, that form your application.
##############################################
########### Container Security Group ##########
##############################################
  ContainerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${AWS::StackName}-containersecuritygroup
      GroupDescription: Allow HTTP from ALBSecurityGroup. Security group for containers
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSecurityGroup
##############################################
################## Service ###################
##############################################
  Service:
    Type: AWS::ECS::Service
    DependsOn: ALBListener
    Properties:
      Cluster: !Ref Cluster
      DesiredCount: 2
      LaunchType: FARGATE
      LoadBalancers:
        - ContainerName: !Sub ${AWS::StackName}-container
          ContainerPort: 80
          TargetGroupArn: !Ref ALBTargetGroup
      NetworkConfiguration:
        AwsvpcConfiguration:
          # change to ENABLED if you're not using private subnets that have access to a NAT gateway
          AssignPublicIp: DISABLED
          SecurityGroups:
            - !Ref ContainerSecurityGroup
          Subnets:
            - !Ref PrivateSubnet1
            - !Ref PrivateSubnet2
      ServiceName: !Sub ${AWS::StackName}-service
      TaskDefinition: !Ref TaskDefinition
# Amazon ECS allows you to run and maintain a specified number of instances of a task definition simultaneously in an
# Amazon ECS cluster. This is called a service. If any of your tasks should fail or stop for any reason, the Amazon ECS
# service scheduler launches another instance of your task definition to replace it and maintain the desired count of
# tasks in the service depending on the scheduling strategy used.
# There are two service scheduler strategies available:
    # REPLICA: The replica scheduling strategy places and maintains the desired number of tasks across your cluster.
              # By default, the service scheduler spreads tasks across Availability Zones. You can use task placement
              # strategies and constraints to customize task placement decisions.
    # DAEMON: The daemon scheduling strategy deploys exactly one task on each active container instance that meets all
              # of the task placement constraints that you specify in your cluster. The service scheduler evaluates the
              # task placement constraints for running tasks and will stop tasks that do not meet the placement
              # constraints. When using this strategy, there is no need to specify a desired number of tasks, a task
              # placement strategy, or use Service Auto Scaling policies.
##############################################
########### Service Scalable Target ##########
##############################################
  ServiceScalableTarget:
    Type: AWS::ApplicationAutoScaling::ScalableTarget
    DependsOn:
      - Service
    Properties:
      MaxCapacity: 3
      MinCapacity: 1
      ResourceId: !Select [ 5, !Split [ ":", !Ref Service ] ]
      RoleARN: !GetAtt ServiceTaskScalingRole.Arn
      ScalableDimension: ecs:service:DesiredCount
      ServiceNamespace: ecs
##############################################
########### Service Scaling Policy ###########
##############################################
  ServiceScalingPolicy:
    Type: AWS::ApplicationAutoScaling::ScalingPolicy
    DependsOn:
      - Service
      - ServiceScalableTarget
    Properties:
      PolicyName: ServiceScalingPolicy
      PolicyType: TargetTrackingScaling
      ScalingTargetId: !Ref ServiceScalableTarget
      TargetTrackingScalingPolicyConfiguration:
        DisableScaleIn: false
        PredefinedMetricSpecification:
          PredefinedMetricType: ECSServiceAverageCPUUtilization
        ScaleInCooldown: 0
        ScaleOutCooldown: 0
        TargetValue: 0.01
##############################################
########## Service Task Scaling Role #########
##############################################
  ServiceTaskScalingRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceAutoscaleRole
##############################################
################# Log Group ##################
##############################################
  LogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub ${AWS::StackName}-log-group
##############################################
################## Task Role #################
##############################################
  TaskRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action:
              - sts:AssumeRole
##############################################
######## Fargate Task Execution Role #########
##############################################
  FargateTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
################## Out Put ###################
##############################################
